--- a/modules-available/runmode/templates/module-machine-list.html
+++ b/modules-available/runmode/templates/module-machine-list.html
@@ -36,12 +36,12 @@
 				</td>
 				<td class="text-center">
 					{{#canedit}}
-					<button type="submit" class="btn btn-danger btn-sm" name="machineuuid" value="{{machineuuid}}">
+					<button type="submit" class="btn btn-danger btn-sm" name="machineuuid" value="{{machineuuid}}" {{disabled}}>
 						<span class="glyphicon glyphicon-trash"></span>
 					</button>
 					{{/canedit}}
 					{{#deleteUrl}}
-					<a class="btn btn-default btn-sm" href="?do={{module}}&amp;{{deleteUrl}}{{modeid}}">
+					<a class="btn btn-default btn-sm {{disabled}}" href="?do={{module}}&amp;{{deleteUrl}}{{modeid}}">
 						<span class="glyphicon glyphicon-edit"></span>
 					</a>
 					{{/deleteUrl}}
