--- a/modules-available/statistics/templates/id44.html
+++ b/modules-available/statistics/templates/id44.html
@@ -17,7 +17,7 @@
 							{{#rows}}
 							<tr id="tmpid{{gb}}" class="{{class}} {{collapse}}">
 								<td data-sort-value="{{gb}}" class="text-left text-nowrap">
-									<a class="filter-val" data-filter-val="{{gb}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~hddgb={{gb}}">{{gb}}&thinsp;GiB</a>
+									<a class="filter-val" data-filter-val="{{gb}}" href="?do=Statistics&amp;show=summary&amp;filters={{query}}~,~hddgb={{gb}}">{{gb}}&thinsp;GiB</a>
 								</td>
 								<td class="text-right">{{count}}</td>
 							</tr>
