--- a/modules-available/statistics/templates/kvmstate.html
+++ b/modules-available/statistics/templates/kvmstate.html
@@ -17,7 +17,7 @@
 							{{#rows}}
 							<tr id="kvm{{kvmstate}}">
 								<td data-sort-value="{{kvmstate}}" class="text-left text-nowrap">
-									<a class="filter-val" data-filter-val="{{kvmstate}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~kvmstate={{kvmstate}}">{{kvmstate}}</a>
+									<a class="filter-val" data-filter-val="{{kvmstate}}" href="?do=Statistics&amp;show=summary&amp;filters={{query}}~,~kvmstate={{kvmstate}}">{{kvmstate}}</a>
 								</td>
 								<td class="text-right">{{count}}</td>
 							</tr>
