--- a/modules-available/statistics/templates/memory.html
+++ b/modules-available/statistics/templates/memory.html
@@ -17,7 +17,7 @@
 							{{#rows}}
 							<tr id="ramid{{gb}}" class="{{class}} {{collapse}}">
 								<td class="text-left text-nowrap" data-sort-value="{{gb}}">
-									<a class="filter-val" data-filter-val="{{gb}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~gbram={{gb}}">{{gb}}&thinsp;GiB</a>
+									<a class="filter-val" data-filter-val="{{gb}}" href="?do=Statistics&amp;show=summary&amp;filters={{query}}~,~gbram={{gb}}">{{gb}}&thinsp;GiB</a>
 								</td>
 								<td class="text-right">{{count}}</td>
 							</tr>
