--- a/modules-available/statistics/templates/filterbox.html
+++ b/modules-available/statistics/templates/filterbox.html
@@ -13,7 +13,7 @@
 						<select id="operatorSelect" name="operator" class="form-control col-4-xs"> </select>
 					</div>
 					<div class="form-group">
-						<input name="argument" id="argumentInput" class="form-control col-4-xs"> </input>
+						<input name="argument" id="argumentInput" class="form-control col-4-xs">
 						<select name="argument" id="argumentSelect" class="form-control col-4-xs"> </select>
 					</div>
 
@@ -41,11 +41,11 @@
 
 
 		<div class="btn-group pull-right">
-			<button class="btn btn-default {{statButtonClass}}" type="submit" name="show" value="stat">
+			<button class="btn btn-default {{statButtonClass}}" type="submit" name="show" value="summary" {{perms.view.summary.disabled}}>
 				<span class="glyphicon glyphicon-stats"></span>
 				{{lang_showVisualization}}
 			</button>
-			<button class="btn btn-default {{listButtonClass}}" type="submit" name="show" value="list">
+			<button class="btn btn-default {{listButtonClass}}" type="submit" name="show" value="list" {{perms.view.list.disabled}}>
 				<span class="glyphicon glyphicon-list"></span>
 				{{lang_showList}}
 			</button>
