[sysconfig] Support new multiserver auth, mount option config support
references #3313

--- a/modules-available/sysconfig/templates/ad_ldap-homedir.html
+++ b/modules-available/sysconfig/templates/ad_ldap-homedir.html
@@ -61,6 +61,20 @@
 			<p><i>{{lang_driveLetterNote}}</i></p>
 		</div>
 	</div>
+	<div class="form-group row">
+		<label for="inputldapAttrMountOpts" class="control-label col-xs-4">{{lang_ldapAttrMountOpts}}</label>
+		<div class="col-xs-8">
+			<input type="text" class="form-control" id="inputldapAttrMountOpts" name="ldapAttrMountOpts" value="{{ldapAttrMountOpts}}">
+		</div>
+	</div>
+	<div class="form-group row">
+		<label for="inputshareHomeMountOpts" class="control-label col-xs-4">{{lang_shareHomeMountOpts}}</label>
+		<div class="col-xs-8">
+			<input type="text" class="form-control" id="inputshareHomeMountOpts" name="shareHomeMountOpts" value="{{shareHomeMountOpts}}"
+					 placeholder="vers=3.0,forceuid,forcegid,nounix,file_mode=0700,dir_mode=0700,noacl,nobrl">
+			<p><i>{{lang_mountOptionsNote}}</i></p>
+		</div>
+	</div>
 
 	<hr>
 	<div class="slx-bold">{{lang_folderRedirection}}</div>
