--- a/modules-available/dnbd3/templates/page-proxy-clients.html
+++ b/modules-available/dnbd3/templates/page-proxy-clients.html
@@ -1,20 +1,53 @@
-<div class="col-md-6">
-	<h2>{{lang_clientList}}</h2>
+<div role="tabpanel" class="tab-pane" id="tab-clients">
+	<div class="row">
+		<div class="col-md-6">
+			{{#loclist.0}}
+				<h2>{{lang_clientsByLocation}}</h2>
 
-	<table class="table table-condensed">
-		<tr>
-			<th>{{lang_client}}</th>
-			<th class="text-right">{{lang_bytesSent}}</th>
-		</tr>
-		{{#clients}}
-			<tr>
-				<td>
-					{{address}}
-				</td>
-				<td data-sort="int" data-sort-value="{{bytesSent}}" class="text-right">
-					{{bytesSent_s}}
-				</td>
-			</tr>
-		{{/clients}}
-	</table>
+				<table class="table table-condensed">
+					<tr>
+						<th>{{lang_location}}</th>
+						<th class="text-right">{{lang_count}}</th>
+						<th class="text-right">{{lang_recursiveCount}}</th>
+					</tr>
+					{{#loclist}}
+						<tr>
+							<td>
+								{{#depth}}
+									<div style="display:inline-block;width:{{depth}}em"></div>
+								{{/depth}}
+								{{locationname}}
+							</td>
+							<td class="text-right">
+								{{clientCount}}
+							</td>
+							<td class="text-right">
+								{{recCount}}
+							</td>
+						</tr>
+					{{/loclist}}
+				</table>
+			{{/loclist.0}}
+		</div>
+		<div class="col-md-6">
+			<h2>{{lang_clientList}}</h2>
+
+			<table class="table table-condensed">
+				<tr>
+					<th>{{lang_client}}</th>
+					<th class="text-right">{{lang_bytesSent}}</th>
+				</tr>
+				{{#clients}}
+					<tr>
+						<td>
+							{{address}}
+						</td>
+						<td data-sort="int" data-sort-value="{{bytesSent}}" class="text-right">
+							{{bytesSent_s}}
+						</td>
+					</tr>
+				{{/clients}}
+			</table>
+		</div>
+	</div>
 </div>
