--- a/modules-available/dnbd3/templates/page-proxy-config.html
+++ b/modules-available/dnbd3/templates/page-proxy-config.html
@@ -1,4 +1,4 @@
-<div class="col-md-6">
+<div role="tabpanel" class="tab-pane active" id="tab-config">
 	<h2>{{lang_proxyConfig}}</h2>
 	<pre>{{config}}</pre>
 </div>
