[dnbd3] Hide tabs that aren't available

--- a/modules-available/dnbd3/templates/page-proxy-clients.html
+++ b/modules-available/dnbd3/templates/page-proxy-clients.html
@@ -1,4 +1,4 @@
-<div role="tabpanel" class="tab-pane" id="tab-clients">
+<div role="tabpanel" class="tab-pane active" id="tab-clients">
 	<div class="row">
 		<div class="col-md-6">
 			{{#loclist.0}}
