--- a/modules-available/sysconfig/templates/list-modules.html
+++ b/modules-available/sysconfig/templates/list-modules.html
@@ -33,9 +33,9 @@
 							name="rebuild" value="{{id}}" title="{{lang_rebuild}}" {{perms.module.edit.disabled}}>
 								<span class="glyphicon glyphicon-refresh"></span>
 							</button>
-							<a class="btn btn-success btn-xs"
+							<a class="btn btn-success btn-xs {{perms.module.edit.disabled}}"
 										href="?do=SysConfig&amp;action=addmodule&amp;step={{moduleType}}_Start&amp;edit={{id}}"
-										title="{{lang_edit}}" {{perms.module.edit.disabled}}>
+										title="{{lang_edit}}">
 								<span class="glyphicon glyphicon-edit"></span>
 							</a>
 							<button class="btn btn-danger btn-xs confirm-delete" name="del" value="{{id}}"
